<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.saad.androidproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_userlist"
        android:name="com.saad.androidproject.ui.userlist.UserListFragment"
        android:label="@string/users_list"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.saad.androidproject.ui.gallery.GalleryFragment"
        android:label="@string/create_users"
        tools:layout="@layout/fragment_gallery" />

</navigation>